fix: add more spacing between the two nav links

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -278,7 +278,7 @@ a:visited {
 
 .brand svg {
     height: auto;
-    max-width: 25rem;
+    max-width: 23rem;
     width: 100%;
 }
 
@@ -322,8 +322,9 @@ a:visited {
 
 .nav a[rel="external"] {
     align-items: center;
-    display: flex;
+    display: grid;
     gap: 0.25em;
+    grid-template-columns: max-content min-content;
     text-decoration: none;
 }
 
@@ -867,7 +868,7 @@ button:focus {
     width: auto;
 }
 
-@media (width >= 72rem) {
+@media (width >= 78rem) {
     h1 {
         font-size: 3.75rem;
     }
